# Churn-prediction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
Churn_prediction.egg-info/: PKG-INFO  top_level.txt
artifacts/: Eda.json  classification_report.csv  eda.json  metrics.json  model_metrics.json  processed_data.csv  scaler.pkl  scores.csv
churn-venv/: pyvenv.cfg
config/: config.py
data/processed/: cleaned_data.csv  pre_processed_data.csv  preprocessed_data.csv  test_data.csv  train_data.csv
data/raw/: customer_churn_raw_data.csv
mlruns/0/: meta.yaml
mlruns/0/00522f095a8946d6ab24ee5319b9dd3e/: meta.yaml
mlruns/0/0070dd2a5a494ad68c9f8fc9352c929f/: meta.yaml
mlruns/0/03eb1493b22c4ecdac2ca6dd64707c47/: meta.yaml
mlruns/0/0821155aa86c46ae9155e0d2e764fc56/: meta.yaml
mlruns/0/09ec10d21c8f4fc494913ddacc65a051/: meta.yaml
mlruns/0/0bbbe973b6e34512b9365a4f75fd6b63/: meta.yaml
models/: churn_predictor_model.pkl
notebooks/: 1 data cleaning.ipynb  2 EDA.ipynb  3 pre processing.ipynb  4 model.ipynb  monitoring.ipynb
reports/: classification_performance_report.html  data_report.html  model_report.html
src/: data.py  eda.py  main.py  metrics.py  predict.py  report.py  train.py  utils.py
src/artifacts/: eda.json
web_application/: Dockerfile  main.py  requirements.txt
web_application/pages/: eda.py  monitoring_reports.py  performance_measures.py  predict.py
web_application/reports/: classification_performance_report.html  data_report.html  model_report.html
web_application/source/: ui.py  utils.py
(+853 files in other folders)
